register sirviendo otra vez

--- a/PlataformaMulticanalFrontend/Views/Account/Login.cshtml
+++ b/PlataformaMulticanalFrontend/Views/Account/Login.cshtml
@@ -131,6 +131,13 @@
                             <div class="role-title">Cliente</div>
                             <div class="role-description">Acceso a compras</div>
                         </label>
+
+                        <label class="role-option" for="roleProveedor">
+                            <input type="radio" id="roleProveedor" name="userRole" value="proveedor">
+                            <i class="fas fa-store"></i>
+                            <div class="role-title">Proveedor</div>
+                            <div class="role-description">Vende productos</div>
+                        </label>
                         
                         <label class="role-option" for="roleAdmin">
                             <input type="radio" id="roleAdmin" name="userRole" value="admin">
